quickfix: fix user name not showing up on sidebar mobile

--- a/src/components/Sidebar/Sidebar.css
+++ b/src/components/Sidebar/Sidebar.css
@@ -107,9 +107,3 @@
     color: black;
   }
 }
-
-@media (max-width: 640px) {
-  .sidebar__profile-name {
-    display: none;
-  }
-}
